優先度追加、作業期間追加

--- a/開発仕様書.md
+++ b/開発仕様書.md
@@ -10,16 +10,38 @@
 
 本プロジェクトは、Microsoft AI Laboのエントランスおよび個人開発部屋において、空間の利用状況と環境データを収集・分析し、最適化を図ることを目的とします。エントランスでは来場者の行動パターンをデータ化し、個人開発部屋では温湿度・CO2レベルの監視による空調の最適化、および利用率の可視化を行います。
 
+## 1.1. プロジェクトタイムライン
+
+**重要なマイルストーン:**
+- **プレスリリース予定:** 2025年10月
+- **目標:** プレスリリースまでに動作するシステムの完成
+
+**開発スケジュール概要:**
+- **現在（2025年8月）:** 仕様策定・設計フェーズ
+- **2025年9月:** 開発・実装・テストフェーズ
+- **2025年10月上旬:** システム統合・最終調整
+- **2025年10月中旬:** プレスリリース対応
+
+**プレスリリース時点での必須機能:**
+- エントランスモニター機能（基本的な人数・属性データの可視化）
+- 個人開発部屋の環境モニター機能（温湿度・CO2による空調最適化の可視化）
+- 基本的なダッシュボード表示
+
 ## 2. プロジェクトスコープ
 
 本スプリント開発では、以下の内容を実装します。
 
+**2025年10月プレスリリースに向けた開発優先度:**
+- **優先度1（必須）:** 基本的なデータ収集・可視化機能
+- **優先度2（推奨）:** 高度な分析・最適化機能
+- **優先度3（将来対応）:** 自動制御・アラート機能
+
 ### 2.1. エントランスモニター機能
 
-#### 来場者のデータ化
+#### 来場者のデータ化 **【優先度1】**
 - エントランスに来る来場者の人数、年齢傾向、性別などのデータを収集・可視化します。
 
-#### 行動パターンのデータ化
+#### 行動パターンのデータ化 **【優先度2】**
 - 動画解析を用いて、来場者の行動パターンをデータ化します。
 
 #### カメラ設置
@@ -40,11 +62,13 @@
 
 ### 2.2. 開発個人部屋の環境モニター機能
 
-#### 空調の最適化
+#### 空調の最適化 **【優先度1】**
 - 温湿度センサーを用いて温湿度を監視し、空調の最適化に利用します。
 - CO2センサーを用いてCO2濃度を監視します。
+- 既存の空調システムとの連携は行わず、データの可視化のみを実装
+- 自動制御は実装せず、管理者向けの情報表示に留める
 
-#### 利用率の可視化
+#### 利用率の可視化 **【優先度2】**
 - 内部照明のON/OFF状態を検知することで、部屋の滞在状況（利用率）を可視化します。
 
 #### 利用技術
@@ -56,28 +80,28 @@
 
 ```mermaid
 graph TD
-    subgraph "Data Sources"
-        A[SONY ITRIOS カメラ] -->|画像データ| B[人物認識サービス]
-        A1[SmartPhone カメラ] -->|画像/動画データ| B1[Google Gemini API]
-        C[個人開発部屋 温湿度CO2センサ 快適君] -->|温湿度/CO2データ| D(環境データ収集サービス)
-        E[個人開発部屋 内部照明状態センサ 快適君] -->|ON/OFFデータ| D
+    subgraph DS[Data Sources]
+        A["SONY ITRIOS カメラ"] -->|"画像データ<br/>プロトコル:未定"| B["人物認識サービス"]
+        A1["SmartPhone カメラ"] -->|"画像/動画データ<br/>プロトコル:未定"| B1["Google Gemini API"]
+        C["快適君<br/>温湿度CO2センサ"] -->|"温湿度/CO2データ<br/>MQTT(S)"| D["環境データ収集サービス"]
+        E["快適君<br/>照明状態センサ"] -->|"ON/OFFデータ<br/>MQTT(S)"| D
     end
 
-    subgraph "Data Processing & Storage"
-        B -->|年齢・性別データ| F[データ処理・分析基盤]
-        B1 -->|人物特徴データ| F
+    subgraph DP[Data Processing & Storage]
+        B -->|"年齢・性別データ"| F["データ処理・分析基盤"]
+        B1 -->|"人物特徴データ"| F
         D --> F
-        F --> G[データストレージ/DB]
+        F --> G["データストレージ/DB"]
     end
 
-    subgraph "Output & Optimization"
-        G --> H[エントランスモニター ダッシュボード]
-        G --> I[個人開発部屋 環境モニター ダッシュボード]
-        G --> J[空調最適化ロジック/制御 検討中]
+    subgraph OUT[Output & Optimization]
+        G --> H["エントランスモニター<br/>Webダッシュボード"]
+        G --> I["個人開発部屋<br/>環境モニター Webダッシュボード"]
+        G --> J["環境データ分析・可視化<br/>(アラート・自動制御なし)"]
     end
 
-    H --> K(Microsoft AI labo Entrance旭光電機ブース)
-    I --> L(Microsoft AI labo 個人開発部屋)
+    H --> K["Microsoft AI labo<br/>Entrance旭光電機ブース"]
+    I --> L["Microsoft AI labo<br/>個人開発部屋"]
     J --> L
 ```
 
@@ -89,32 +113,73 @@ graph TD
   - **快適君**: 個人開発部屋からは温湿度、CO2、照明ON/OFFデータが収集されます。
 - **データ処理・分析基盤:** 収集された生データは、人物認識サービス（SONY ITRIOS）、Google Gemini API（SmartPhone）、環境データ収集サービスを通じて処理され、分析基盤に集約されます。
 - **データストレージ:** 処理されたデータはデータベースに格納されます。
-- **出力・最適化:** 格納されたデータは、各ダッシュボードで可視化される他、個人開発部屋の空調最適化ロジックへ入力されます。
+- **出力・可視化:** 格納されたデータは、Webダッシュボードで可視化されます。アラート・通知機能、既存システムとの連携は実装しません。
+
+
+## 3.1. センサークラウド間インターフェース仕様
+
+システム内の各コンポーネント間のデータ通信プロトコルと接続方式を以下に定義します。
+
+### 環境センサー系
+- **快適君（温湿度CO2センサ） → 環境データ収集サービス**
+  - プロトコル: MQTT(S) - Message Queuing Telemetry Transport over TLS/SSL
+  - 通信方式: セキュアな暗号化通信
+  - データ形式: JSON形式での温湿度・CO2・照明状態データ
+
+### エントランスカメラ系
+- **SONY ITRIOS カメラ → 人物認識サービス**
+  - プロトコル: **未定**（検討中）
+  - 候補: HTTP/HTTPS、専用API、ストリーミングプロトコル等
+  - データ形式: 画像データ（年齢・性別認識用）
+
+- **SmartPhone カメラ → Google Gemini API**
+  - プロトコル: **未定**（検討中）
+  - 候補: HTTPS REST API、WebSocket、モバイルSDK等
+  - データ形式: 画像/動画データ（人物特徴分析用）
+
+### 検討事項
+- ITRIOSカメラの通信プロトコル選定
+- SmartPhone実装方式（ネイティブアプリ vs Webアプリ）の決定
+- リアルタイム性要件に応じた通信方式の最適化
+
+## 3.2. Webダッシュボード仕様
+
+### 基本仕様
+- **表示方式:** Webダッシュボードによる可視化（モバイルアプリ、定期レポートは対象外）
+- **アクセス方法:** ブラウザからアクセス可能なURL
+- **機能範囲:** データ表示・可視化のみ（アラート・通知機能なし）
+- **技術基盤:** Microsoft Azure
+
+### 対象ダッシュボード
+- **エントランスモニター用Webダッシュボード**
+  - 来場者数、年齢・性別分布の表示
+  - 時間別・日別のトレンド表示
+- **個人開発部屋環境モニター用Webダッシュボード**
+  - 温湿度・CO2データのリアルタイム表示
+  - 環境データの履歴・トレンド表示
+
+### 検討事項
+- 表示する情報の種類、グラフ形式、更新頻度
+- 利用するWebフレームワークや可視化ライブラリ
+- レスポンシブ対応の必要性
 
 ## 4. 検討が必要な内容
 
 現状の資料から、以下の項目について詳細な検討と決定が必要です。
 
 ### データ連携方法とプロトコル
-- 各種センサー、カメラからデータ処理・分析基盤への具体的なデータ連携方法（例: 有線/無線、MQTT/HTTP、クラウド連携サービスなど）
-- 特に「SmartPhone」が動画認識にどのように活用され、データがどこに送信されるのか
+- **エントランスカメラ系**: 以下のプロトコル選定が必要
+  - SONY ITRIOSカメラから人物認識サービスへの通信方式
+  - SmartPhoneからGoogle Gemini APIへの通信方式
+- データ処理・分析基盤への各サービスからの集約方式
 
-### データ処理・分析基盤の具体的な技術スタック
-- AWS、Azure、GCPなどのクラウドサービスか、オンプレミスか
-- データ処理パイプラインの構築方法（例: ストリーミング処理、バッチ処理）
+### データ処理・分析基盤の技術スタック
+- **クラウドサービス:** Microsoft Azure
+- **検討事項:** データ処理パイプラインの構築方法（例: ストリーミング処理、バッチ処理）
 
 ### データストレージの詳細
 - データベースの種類（例: NoSQL, リレーショナルDB）とデータモデル
 - データ保存期間、データ容量の見積もり
-
-### 空調最適化ロジックの具体化
-- 温湿度、CO2データから、どのように空調を「最適化」するのか
-- 自動制御を行うのか、または管理者にレコメンドを提示するのか
-- 制御対象となる空調システムとの連携方法
-
-### ダッシュボードの要件
-- 表示する情報の種類、グラフ形式、更新頻度など
-- 利用するBIツールや可視化フレームワーク
 
 ### プライバシーへの配慮
 - エントランスにおける来場者の「人数や年齢傾向」「行動パターン」のデータ化における、プライバシー保護の具体的なガイドラインと実装方法
@@ -127,24 +192,24 @@ graph TD
 - エントランスカメラの具体的な機種、解像度、画角、夜間・低照度時の性能、ネットワーク要件など
 - 「窓を通してエントランスをモニター」する際の、光の反射、歪み、画質への影響と対策
 
-### Microsoft AI labo 受付（希望される場合）
-この項目がスプリント開発全体構成図に含まれていますが、具体的な「AIラボで開発＆ラボへの実装内容」に記載がありません。この項目が本プロジェクトのスコープに含まれる場合、その具体的な内容と連携方法を定義する必要があります。
+### Microsoft AI labo 受付（スコープ外）
+今回のプロジェクトスコープには含まれません。
+- プロジェクト完了後、ダッシュボードのURLを受付に連絡する程度の対応
+- 受付向けの専用機能開発は実施しない
+- 受付での表示や操作は、通常のWebダッシュボードのURL共有で対応
 
-## 5. 質問（抜けている項目について）
+## 5. プロジェクト制約事項
 
-上記の「検討が必要な内容」と関連しますが、開発を具体的に進めるにあたり、以下の情報が不足しているためご質問させていただきます。
+### 機能制約
+- **アラート・通知機能なし:** メール通知、ブザー等のアラート機能は実装しません
+- **既存システム連携なし:** Microsoft AI Labo内の既存システムとの連携は行いません
+- **自動制御なし:** 空調等の自動制御機能は実装しません
 
-1. **データの可視化とレポート機能の詳細**  
-   収集したデータをどのようにユーザーに提示する予定ですか？ (例: Webダッシュボード、モバイルアプリ、定期レポートなど)
+### 技術制約
+- **可視化方式:** Webダッシュボードのみ（モバイルアプリ、定期レポートなし）
+- **表示のみ:** データの表示・可視化機能に特化
 
-2. **アラート/通知機能の有無**  
-   温湿度やCO2濃度が閾値を超えた場合、または利用率の異常があった場合に、関係者にアラートや通知を発する機能は必要ですか？
-
-3. **既存システムとの連携**  
-   Microsoft AI Labo内の既存の空調システムやセキュリティシステムなど、連携が必要なシステムはありますか？
-
-4. **プロジェクトのフェーズとタイムライン**  
-   スプリント開発と記載がありますが、全体的な開発ロードマップや主要なマイルストーンはどのように設定されていますか？
-
-5. **Microsoft AI Labo 受付に関する詳細**  
-   「Microsoft AI labo 受付（希望される場合）」は、今回のプロジェクトの範囲に含まれますか？含まれる場合、どのような機能が期待されていますか？
+### スコープ制約
+- **Microsoft AI Labo 受付:** プロジェクトスコープ外（完成後にダッシュボードURL連絡のみ）
+- **プレスリリース期限:** 2025年10月までに基本機能を完成
+- **開発優先順位:** 優先度1の機能（基本的なデータ収集・可視化）を最優先で実装
