8月8日作成分

--- a/機能仕様書_データ取得元.md
+++ b/機能仕様書_データ取得元.md
@@ -74,26 +74,26 @@
 
 | 表示項目 | データ取得元 | 説明 |
 |---------|-------------|------|
-| 通り抜け | AI分析システム | エントランスを素早く通過する行動の割合 |
-| 情報確認 | AI分析システム | 掲示物や案内を確認する行動の割合 |
-| 待ち合わせ | AI分析システム | 人との待ち合わせで滞在する行動の割合 |
-| スマホ操作 | AI分析システム | スマートフォンを操作する行動の割合 |
-| 会話 | AI分析システム | 他の人と会話する行動の割合 |
-| 迷い・探索 | AI分析システム | 方向を探している行動の割合 |
+| 通り抜け | SONY AITRIOS + Azure AI Vision + Gemini API | エントランスを素早く通過する行動の割合 |
+| 情報確認 | SONY AITRIOS + Azure AI Vision + Gemini API | 掲示物や案内を確認する行動の割合 |
+| 待ち合わせ | SONY AITRIOS + Azure AI Vision + Gemini API | 人との待ち合わせで滞在する行動の割合 |
+| スマホ操作 | SONY AITRIOS + Azure AI Vision + Gemini API | スマートフォンを操作する行動の割合 |
+| 会話 | SONY AITRIOS + Azure AI Vision + Gemini API | 他の人と会話する行動の割合 |
+| 迷い・探索 | SONY AITRIOS + Azure AI Vision + Gemini API | 方向を探している行動の割合 |
 
 ### 4.2 行動パターン分布チャート
 
 | 表示項目 | データ取得元 | 説明 |
 |---------|-------------|------|
-| 行動パターン円グラフ | AI分析システム | 各行動パターンの割合を視覚化 |
+| 行動パターン円グラフ | SONY AITRIOS + Azure AI Vision + Gemini API | 各行動パターンの割合を視覚化 |
 
 ### 4.3 行動分析サマリー
 
 | 表示項目 | データ取得元 | 説明 |
 |---------|-------------|------|
-| 平均滞在時間 | AI分析システム | エントランスでの平均滞在時間（分） |
-| 最多行動パターン | AI分析システム | 最も多く観察された行動パターン |
-| 分析対象者数 | AI分析システム | 行動分析を行った来場者の総数 |
+| 平均滞在時間 | SONY AITRIOS + Azure AI Vision + Gemini API | エントランスでの平均滞在時間（分） |
+| 最多行動パターン | SONY AITRIOS + Azure AI Vision + Gemini API | 最も多く観察された行動パターン |
+| 分析対象者数 | SONY AITRIOS + Azure AI Vision + Gemini API | 行動分析を行った来場者の総数 |
 
 ## 5. 個人開発部屋環境データ画面
 
@@ -175,9 +175,12 @@
 
 | 表示項目 | データ取得元 | 説明 |
 |---------|-------------|------|
-| 人物認識カメラ状態 | 人物認識カメラ | 稼働状態（稼働中/エラー） |
-| AI分析システム状態 | AI分析システム | 稼働状態（稼働中/エラー） |
-| 検出精度 | 人物認識カメラ | 人物検出の精度（%） |
+| SONY AITRIOSカメラ状態 | SONY AITRIOS Edgeカメラ | 稼働状態（稼働中/エラー） |
+| Webカメラ状態 | Webカメラ | 稼働状態（稼働中/エラー） |
+| Azure AI Vision状態 | Azure AI Vision API | 稼働状態（稼働中/エラー） |
+| Gemini API状態 | Google Gemini API | 稼働状態（稼働中/エラー） |
+| 人物検出精度 | SONY AITRIOS Edgeカメラ | 人物検出の精度（%） |
+| 画像分析精度 | Azure AI Vision + Gemini API | 画像分析の精度（%） |
 | 最終更新時刻 | システム統合処理 | データの最終更新時刻 |
 
 ## 6. データ更新頻度
@@ -185,8 +188,10 @@
 | データカテゴリ | 更新頻度 | 備考 |
 |---------------|---------|------|
 | 画面自動切り替え | 10秒間隔 | 6画面を順次循環表示 |
-| 人物認識カメラデータ | 10秒間隔 | 人物検出・属性推定 |
-| AI分析システムデータ | 10秒間隔 | 行動分析・特徴抽出 |
+| SONY AITRIOS人物検出 | リアルタイム | 人物検出トリガー |
+| Webカメラ画像取得 | トリガー時 | AITRIOS検出時に撮影 |
+| Azure AI Vision分析 | 画像取得時 | 画像アップロード後分析 |
+| Gemini API分析 | 画像取得時 | Azure Vision結果と併用 |
 | 快適君環境データ | 10秒間隔 | 温湿度・CO2測定 |
 | 快適君利用状況データ | 10秒間隔 | 照明ON/OFF検知 |
 | 統計・分析データ | 10秒間隔 | 集計・計算処理 |
@@ -194,23 +199,78 @@
 
 ## 7. データ精度・信頼性
 
-### 6.1 人物認識カメラ
+### 7.1 SONY AITRIOS Edgeカメラ
 
-- **年齢推定精度:** ±5歳程度
-- **性別推定精度:** 95%以上
 - **人物検出精度:** 98%以上（良好な照明条件下）
+- **検出応答時間:** 数ミリ秒
+- **通信方式:** MQTT連携
+- **トリガー精度:** 99%以上
 
-### 6.2 AI分析システム
+### 7.2 Webカメラ
 
-- **行動分析精度:** 90%以上
-- **感情推定精度:** 85%以上
-- **特徴抽出精度:** 88%以上
+- **画像解像度:** 高解像度対応
+- **撮影フォーマット:** JPEG/PNG
+- **制御方式:** リモート制御
+- **撮影精度:** 95%以上
 
-### 6.3 快適君センサー
+### 7.3 Azure AI Vision
+
+- **画像内容理解精度:** 95%以上
+- **オブジェクト検出精度:** 92%以上
+- **キャプション生成精度:** 90%以上
+- **応答時間:** 数秒以内
+- **対応フォーマット:** JPEG/PNG
+
+### 7.4 Google Gemini API
+
+- **高度な説明生成精度:** 88%以上
+- **行動パターン分析精度:** 85%以上
+- **コンテキスト理解精度:** 90%以上
+- **通信方式:** WebSocket（ステートフル）
+- **セッション制限:** Firebaseプロジェクトごとに最大10セッション
+
+### 7.5 快適君センサー
 
 - **温度測定精度:** ±0.5°C
 - **湿度測定精度:** ±3%RH
 - **CO2測定精度:** ±50ppm
+- **通信方式:** MQTT(S)
+- **データ更新頻度:** 10秒間隔
+
+## 8. AI分析システム詳細仕様
+
+### 8.1 データフロー
+
+1. **AITRIOS人物検出**
+   - SONY AITRIOS Edgeカメラによるリアルタイム人物検出
+   - MQTTメッセージ送信によるトリガー信号生成
+   - 検出精度: 98%以上、応答時間: 数ミリ秒
+
+2. **Webカメラ撮影**
+   - AITRIOS検出時の高解像度静止画取得
+   - ローカル保存・メタデータ付与
+   - 撮影精度: 95%以上
+
+3. **Azure AI Vision分析**
+   - Blob Storageへの画像アップロード
+   - 画像内容理解・オブジェクト検出・キャプション生成
+   - 分析精度: 95%以上、応答時間: 数秒以内
+
+4. **Gemini API分析**
+   - Azure Vision結果と併用した高度な説明生成
+   - 行動パターン分析・コンテキスト理解
+   - 分析精度: 88%以上
+
+5. **結果統合**
+   - 複数AI結果のマージ・信頼度評価
+   - 最終出力生成・データベース保存
+
+### 8.2 技術的制約
+
+- **レイテンシ:** 数秒〜数十秒（UX設計で体感速度向上）
+- **セキュリティ:** SAS認証、データ暗号化必須
+- **フォーマット制限:** JPEG/PNGのみ対応
+- **API制限:** Gemini APIはFirebaseプロジェクトごとに最大10セッション
 
 ## 9. 注意事項
 
@@ -224,3 +284,5 @@
 8. **システム依存性:** 各センサーの稼働状況により、一部データが取得できない場合があります
 9. **精度変動:** 環境条件（照明、天候等）により、検出・分析精度が変動する場合があります
 10. **画面進捗表示:** 現在表示中の画面番号と総画面数が常時表示されます
+11. **AI分析遅延:** クラウド処理による遅延がありますが、UX設計により「リアルタイム風」体験を演出します
+12. **フレーム単位処理:** フレーム単位の推論では一時的な動きが反映されない可能性があります
