・TBD事項を追記 ・要検討事項を別ファイルに移動 ・システム構成を更新

--- a/開発仕様書.md
+++ b/開発仕様書.md
@@ -1,8 +1,9 @@
 # Microsoft AI Labo スマート空間最適化プロジェクト 開発仕様書
 
-**プロジェクト名:** Microsoft AI Labo スマート空間最適化プロジェクト  
+**プロジェクト名:** Microsoft AI Labo スマート空間最適化プロジェクト 
+**略称:** MAISS (マイス　：Microsoft AI Labo Smart Space Sprint)
 **開発主体:** 旭光電機株式会社  
-**作成日:** 2025年7月16日 (スプリント開発概要に基づく)  
+**作成日:** 2025年8月19日 (スプリント開発概要に基づく)  
 **バージョン:** 1.0  
 **参考資料:** Microsoft AI Labo.pdf(スプリント開発概要について記載)
 
@@ -10,7 +11,7 @@
 
 本プロジェクトは、Microsoft AI Laboのエントランスおよび個人開発部屋において、空間の利用状況と環境データを収集・分析し、最適化を図ることを目的とします。エントランスでは来場者の行動パターンをデータ化し、個人開発部屋では温湿度・CO2レベルの監視による空調の最適化、および利用率の可視化を行います。
 
-## 1.1. プロジェクトタイムライン
+## 1.1. プロジェクトタイムライン　(TBD)
 
 **重要なマイルストーン:**
 - **プレスリリース予定:** 2025年10月
@@ -36,7 +37,7 @@
 - **優先度2（推奨）:** 高度な分析・最適化機能
 - **優先度3（将来対応）:** 自動制御・アラート機能
 
-### 2.1. エントランスモニター機能
+### 2.1. エントランスモニター機能　(TBD)
 
 #### 来場者のデータ化 **【優先度1】**
 - エントランスに来る来場者の人数、年齢傾向、性別などのデータを収集・可視化します。
@@ -82,27 +83,29 @@
 graph TD
     subgraph DS[Data Sources]
         A["SONY ITRIOS カメラ"] -->|"画像データ<br/>プロトコル:未定"| B["人物認識サービス"]
-        A1["SmartPhone カメラ"] -->|"画像/動画データ<br/>プロトコル:未定"| B1["Google Gemini API"]
+        A1["SmartPhone カメラ"] -->|"画像/動画データ<br/>プロトコル:未定"| B1["Google Gemini API (TBD)"]
         C["快適君<br/>温湿度CO2センサ"] -->|"温湿度/CO2データ<br/>MQTT(S)"| D["環境データ収集サービス"]
-        E["快適君<br/>照明状態センサ"] -->|"ON/OFFデータ<br/>MQTT(S)"| D
+        E["快適君<br/>照明状態センサ"] -->|"照度データ<br/>MQTT(S)"| D
     end
 
-    subgraph DP[Data Processing & Storage]
-        B -->|"年齢・性別データ"| F["データ処理・分析基盤"]
-        B1 -->|"人物特徴データ"| F
+    subgraph DP[バックエンド]
+        B -->|"年齢・性別データ(TBD)"| F["データ処理・分析基盤"]
+        B1 -->|"人物特徴データ(TBD)"| F
         D --> F
         F --> G["データストレージ/DB"]
     end
 
-    subgraph OUT[Output & Optimization]
+    subgraph OUT[フロントエンド]
         G --> H["エントランスモニター<br/>Webダッシュボード"]
         G --> I["個人開発部屋<br/>環境モニター Webダッシュボード"]
         G --> J["環境データ分析・可視化<br/>(アラート・自動制御なし)"]
+        H --> M["統合ダッシュボード"]
+        I --> M["統合ダッシュボード"]
+        J --> M["統合ダッシュボード"]
     end
 
-    H --> K["Microsoft AI labo<br/>Entrance旭光電機ブース"]
-    I --> L["Microsoft AI labo<br/>個人開発部屋"]
-    J --> L
+    M --> K["Microsoft AI labo<br/>Entrance旭光電機ブース"]
+    M --> L["Microsoft AI labo<br/>個人開発部屋"]
 ```
 
 ### システム構成の説明
@@ -163,42 +166,7 @@ graph TD
 - 利用するWebフレームワークや可視化ライブラリ
 - レスポンシブ対応の必要性
 
-## 4. 検討が必要な内容
-
-現状の資料から、以下の項目について詳細な検討と決定が必要です。
-
-### データ連携方法とプロトコル
-- **エントランスカメラ系**: 以下のプロトコル選定が必要
-  - SONY ITRIOSカメラから人物認識サービスへの通信方式
-  - SmartPhoneからGoogle Gemini APIへの通信方式
-- データ処理・分析基盤への各サービスからの集約方式
-
-### データ処理・分析基盤の技術スタック
-- **クラウドサービス:** Microsoft Azure
-- **検討事項:** データ処理パイプラインの構築方法（例: ストリーミング処理、バッチ処理）
-
-### データストレージの詳細
-- データベースの種類（例: NoSQL, リレーショナルDB）とデータモデル
-- データ保存期間、データ容量の見積もり
-
-### プライバシーへの配慮
-- エントランスにおける来場者の「人数や年齢傾向」「行動パターン」のデータ化における、プライバシー保護の具体的なガイドラインと実装方法
-- データの匿名化、保存期間、アクセス制限など
-
-### セキュリティ要件
-- データ通信の暗号化、データアクセス認証、システム全体の脆弱性対策など
-
-### カメラの詳細
-- エントランスカメラの具体的な機種、解像度、画角、夜間・低照度時の性能、ネットワーク要件など
-- 「窓を通してエントランスをモニター」する際の、光の反射、歪み、画質への影響と対策
-
-### Microsoft AI labo 受付（スコープ外）
-今回のプロジェクトスコープには含まれません。
-- プロジェクト完了後、ダッシュボードのURLを受付に連絡する程度の対応
-- 受付向けの専用機能開発は実施しない
-- 受付での表示や操作は、通常のWebダッシュボードのURL共有で対応
-
-## 5. プロジェクト制約事項
+## 4. プロジェクト制約事項
 
 ### 機能制約
 - **アラート・通知機能なし:** メール通知、ブザー等のアラート機能は実装しません
