機能仕様書_データ取得元修正

--- a/機能仕様書_データ取得元.md
+++ b/機能仕様書_データ取得元.md
@@ -102,8 +102,8 @@
 | 湿度状態 | 快適君（温湿度CO2センサ） | 湿度の適正判定と推奨範囲 |
 | CO2濃度 | 快適君（温湿度CO2センサ） | 現在CO2濃度（ppm） |
 | CO2状態 | 快適君（温湿度CO2センサ） | CO2濃度の適正判定と推奨値 |
-| 利用状況 | 快適君（照明状態センサ） | 現在利用状況 |
-| 本日利用時間 | 快適君（照明状態センサ） | 本日の累積利用時間 |
+| 利用状況 | 快適君（温湿度CO2センサ） | 現在利用状況 |
+| 本日利用時間 | 快適君（温湿度CO2センサ） | 本日の累積利用時間 |
 
 ## 6. 個人開発部屋トレンド分析画面
 
