快適君のデータ取得元を具体化

--- a/機能仕様書_データ取得元.md
+++ b/機能仕様書_データ取得元.md
@@ -96,14 +96,14 @@
 
 | 表示項目 | データ取得元 | 説明 |
 |---------|-------------|------|
-| 温度 | 快適君（温湿度CO2センサ） | 現在室温（°C） |
-| 温度状態 | 快適君（温湿度CO2センサ） | 温度の適正判定と推奨範囲 |
-| 湿度 | 快適君（温湿度CO2センサ） | の現在湿度（%） |
-| 湿度状態 | 快適君（温湿度CO2センサ） | 湿度の適正判定と推奨範囲 |
-| CO2濃度 | 快適君（温湿度CO2センサ） | 現在CO2濃度（ppm） |
-| CO2状態 | 快適君（温湿度CO2センサ） | CO2濃度の適正判定と推奨値 |
-| 利用状況 | 快適君（温湿度CO2センサ） | 現在利用状況 |
-| 本日利用時間 | 快適君（温湿度CO2センサ） | 本日の累積利用時間 |
+| 温度 | 快適君（温湿度CO2センサ）のTemperature | 現在室温（°C） |
+| 温度状態 | 快適君（温湿度CO2センサ）のTemperatureをもとにクラウドで閾値で判定  | 温度の適正判定と推奨範囲 |
+| 湿度 | 快適君（温湿度CO2センサ）のHumidity | の現在湿度（%） |
+| 湿度状態 | 快適君（温湿度CO2センサ）のHumidityをもとにクラウドで閾値で判定 | 湿度の適正判定と推奨範囲 |
+| CO2濃度 | 快適君（温湿度CO2センサ）のCO2 | 現在CO2濃度（ppm） |
+| CO2状態 | 快適君（温湿度CO2センサ）のCO2 をもとにクラウドで閾値で判定 | CO2濃度の適正判定と推奨値 |
+| 利用状況 | 快適君（温湿度CO2センサ）のIlluminanceをもとにクラウドで閾値で判定 | 現在利用状況 |
+| 本日利用時間 | 利用状況より1日の累積の利用時間をクラウドで算出 | 本日の累積利用時間 |
 
 ## 6. 個人開発部屋トレンド分析画面
 
@@ -111,5 +111,5 @@
 
 | 表示項目 | データ取得元 | 説明 |
 |---------|-------------|------|
-| 温度・湿度トレンド | 快適君（温湿度CO2センサ） | 24時間のデュアル軸グラフ |
-| CO2濃度トレンド | 快適君（温湿度CO2センサ） | 24時間のエリアグラフ |
+| 温度・湿度トレンド | 快適君（温湿度CO2センサ）のTemperatureとHumidityの1日分をクラウドに蓄積 | 24時間のデュアル軸グラフ |
+| CO2濃度トレンド | 快適君（温湿度CO2センサ）のCO2を1日分をクラウドに蓄積 | 24時間のエリアグラフ |
