feat: Add Azure Bicep infrastructure and MQTT support
- Add complete Bicep infrastructure templates for MASS project
- Add Azure IoT Hub MQTT client for Kaiteki sensor data
- Add GitHub Actions CI/CD pipeline for Azure deployment
- Add comprehensive documentation and deployment scripts
- Support for dev and prod environments
- Include Cosmos DB, App Service, IoT Hub, and monitoring resources

--- a/要検討.md
+++ b/要検討.md
@@ -4,6 +4,24 @@
 
 現状の資料から、以下の項目について詳細な検討と決定が必要です。
 
+### AITRIOS 人物検出・画像処理フロー
+- **AITRIOS 人物検出**: エントランスでの人物検出機能
+  - 検出精度と信頼度の設定
+  - 誤検出（影、反射等）への対策
+  - 検出頻度と処理間隔の設定
+- **別カメラ撮影**: 人物検出後の画像取得
+  - 撮影タイミングの制御方法
+  - 画像品質と解像度の設定
+  - 撮影失敗時の再試行ロジック
+- **Azure 画像アップロード**: クラウドへの転送
+  - アップロードプロトコル（HTTPS、Azure Blob Storage等）
+  - 画像圧縮・最適化の必要性
+  - ネットワーク帯域と転送速度の考慮
+- **Azure AI Content Understanding**: 画像説明・状況把握
+  - 分析精度と処理時間のバランス
+  - 必要な情報の抽出項目（人数、行動、状況等）
+  - 結果の保存形式とデータベース設計
+
 ### データ連携方法とプロトコル
 - **エントランスカメラ系**: 以下のプロトコル選定が必要
   - SONY ITRIOSカメラから人物認識サービスへの通信方式
